--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     });
     </script>
     <script src="circular-slider.js"></script>
+    <script src="flot/jquery.flot.min.js"></script>
 
     <script src="jschannel.js"></script>
     <script src="three.min.js"></script>
@@ -47,6 +48,8 @@
         </div>
         <div class="clear"></div>
         <a class="play button">Запустить ►<a>
+    </div>
+    <div id="plot">
     </div>
 </body>
 </html>
