--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="jschannel.js"></script>
     <script src="three.min.js"></script>
+    <script src="objloader.js"></script>
     <script src="trackball_controls.js"></script>
 
     <script src="physics.js" defer='defer'></script>
