--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
             </button>
         </div>
-        <div id="alert-notification" class="alert alert-danger" role="alert" hidden>Волчок упал</div>
+        <div id="alert-notification" class="alert alert-danger" role="alert" hidden>У Вас упало :(</div>
     </div>
     <div id="plot-container">
         <div id="plot-placeholder"></div>
